--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -7,7 +7,7 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.E.Threshold=error 
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
+log4j.appender.stdout.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %l%m%n
  
 ### \u8F93\u51FA\u5230\u65E5\u5FD7\u6587\u4EF6 ###
 log4j.appender.D=org.apache.log4j.DailyRollingFileAppender
@@ -16,7 +16,7 @@ log4j.appender.D.Append=true
 ## \u8F93\u51FADEBUG\u7EA7\u522B\u4EE5\u4E0A\u7684\u65E5\u5FD7
 log4j.appender.D.Threshold=info 
 log4j.appender.D.layout=org.apache.log4j.PatternLayout
-log4j.appender.D.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
+log4j.appender.D.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %l%m%n
  
 ### \u4FDD\u5B58\u5F02\u5E38\u4FE1\u606F\u5230\u5355\u72EC\u6587\u4EF6 ###
 log4j.appender.E=org.apache.log4j.DailyRollingFileAppender
@@ -24,7 +24,7 @@ log4j.appender.E.File=${catalina.home}/logs/apilog/error.log
 log4j.appender.E.MaxFileSize=10240KB
 log4j.appender.E.Append=true
 log4j.appender.E.layout=org.apache.log4j.PatternLayout
-log4j.appender.E.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
+log4j.appender.E.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %l%m%n
 
 #log4j.logger.com.springframework=debug
 log4j.logger.org.springframework.security=debug
