重装系统后，项目无法启动，原因是配置文件多了<wb-resource deploy-path=/WEB-INF/classes source-path=//>

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<name>auth2Demo</name>
 	<url>http://maven.apache.org</url>
 	<properties>
-		<moduleName>activity</moduleName>
+		<moduleName>auth2Demo</moduleName>
 	</properties>
 	<dependencies>
 		<dependency>
